@@ -4,25 +4,25 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
+
 import dev.com.qnota.dominio.principal.disciplina.DisciplinaId;
-import dev.com.qnota.dominio.principal.aluno.Justificativa;
+import dev.com.qnota.dominio.principal.aluno.Justificativa; // ajuste o pacote se necessário
 import dev.com.qnota.dominio.principal.responsavel.ResponsavelId;
 import dev.com.qnota.dominio.principal.simulado.SimuladoId;
 import dev.com.qnota.dominio.principal.turma.TurmaId;
 
 public class Aluno {
 
-    private AlunoId id; // atribuído pelo repositório/ORM
+    private AlunoId id; // ORM
     private String nome;
     private LocalDate dataNascimento;
     private boolean ativo;
     private TurmaId turma;
 
-    // Agora: lista simples de responsáveis + um principal
-    private final List<ResponsavelId> responsaveis;
-    private ResponsavelId responsavelPrincipal;
+    /** Agora o vínculo é um VO (id + flag de principal) */
+    private final List<AlunoResponsavel> vinculos;
 
-    // Coleção de notas do aluno organizadas por simulado e disciplina
+    // Notas (mantido)
     private final Map<String, NotaDoAluno> notas;
 
     /** Construtor recomendado (ID gerado na persistência). */
@@ -39,13 +39,13 @@ public class Aluno {
         this.ativo = ativo;
         this.turma = Objects.requireNonNull(turma, "'turma' não pode ser nula");
 
-        var lista = copyIds(responsaveis);
-        this.responsaveis = lista;
-        this.responsavelPrincipal = principal;
+        var lista = montarVinculos(responsaveis, principal);
+        validarInvariantesVinculos(lista);
+        this.vinculos = new ArrayList<>(lista);
         this.notas = new HashMap<>();
     }
 
-    /** Construtor compatível quando o ID já é conhecido. */
+    /** Construtor com id (compatibilidade). */
     public Aluno(AlunoId id,
                  String nome,
                  LocalDate dataNascimento,
@@ -60,8 +60,7 @@ public class Aluno {
     /** ORM/Repo fixa o ID se ainda não houver. */
     public void atribuirIdSeAusente(AlunoId novoId) {
         Objects.requireNonNull(novoId, "'id' não pode ser nulo");
-        if (this.id != null && !this.id.equals(novoId))
-            throw new IllegalStateException("ID já atribuído e diferente");
+        if (this.id != null && !this.id.equals(novoId)) throw new IllegalStateException("ID já atribuído e diferente");
         this.id = novoId;
     }
 
@@ -71,8 +70,22 @@ public class Aluno {
     public LocalDate getDataNascimento() { return dataNascimento; }
     public boolean isAtivo() { return ativo; }
     public TurmaId getTurma() { return turma; }
-    public List<ResponsavelId> getResponsaveis() { return Collections.unmodifiableList(responsaveis); }
-    public ResponsavelId getResponsavelPrincipal() { return responsavelPrincipal; }
+
+    /** Mantido por compatibilidade (ids simples) */
+    public List<ResponsavelId> getResponsaveis() {
+        return vinculos.stream().map(AlunoResponsavel::responsavel).toList();
+    }
+
+    /** Novo: acesso direto aos vínculos (VO) */
+    public List<AlunoResponsavel> getVinculos() {
+        return Collections.unmodifiableList(vinculos);
+    }
+
+    public ResponsavelId getResponsavelPrincipal() {
+        return vinculos.stream().filter(AlunoResponsavel::principal)
+                .map(AlunoResponsavel::responsavel).findFirst().orElse(null);
+    }
+
     public Collection<NotaDoAluno> getNotas() { return Collections.unmodifiableCollection(notas.values()); }
 
     // ========= operações =========
@@ -83,142 +96,135 @@ public class Aluno {
         this.turma = Objects.requireNonNull(novaTurma, "'novaTurma' não pode ser nula");
     }
 
-    /** Substituição completa da lista e do principal. */
+    /** Substituição completa dos vínculos. */
     public void substituirResponsaveis(List<ResponsavelId> novaLista, ResponsavelId novoPrincipal) {
-        var tmp = copyIds(novaLista);
-        responsaveis.clear();
-        responsaveis.addAll(tmp);
-        responsavelPrincipal = novoPrincipal;
+        var novos = montarVinculos(novaLista, novoPrincipal);
+        validarInvariantesVinculos(novos);
+        vinculos.clear();
+        vinculos.addAll(novos);
     }
 
-    /** Vincular responsável. Operação simples sem validações de negócio. */
+    /** RN-19/58: adiciona vínculo. Se principal=true e já existir principal, lança exceção. */
     public void adicionarResponsavel(ResponsavelId idResp, boolean principal) {
         Objects.requireNonNull(idResp, "'responsavelId' não pode ser nulo");
 
-        var nova = new ArrayList<>(responsaveis);
-        nova.add(idResp);
+        if (contem(idResp)) throw new IllegalStateException("já existe vínculo entre o responsável e o aluno");
+        if (principal && getResponsavelPrincipal() != null)
+            throw new IllegalStateException("deve haver exatamente um responsável principal");
 
-        var novoPrincipal = this.responsavelPrincipal;
-        if (principal) {
-            novoPrincipal = idResp;
+        if (vinculos.size() >= 3) throw new IllegalStateException("o número máximo de responsáveis por aluno é 3");
+
+        var novo = new AlunoResponsavel(idResp, principal);
+        vinculos.add(novo);
+
+        // Se ainda não há principal, promova o primeiro vínculo
+        if (getResponsavelPrincipal() == null) {
+            promover(vinculos.get(0).responsavel());
         }
-        if (novoPrincipal == null) novoPrincipal = idResp; // garante 1 principal
 
-        responsaveis.clear();
-        responsaveis.addAll(nova);
-        responsavelPrincipal = novoPrincipal;
+        validarInvariantesVinculos(vinculos);
     }
 
-    /** Desvincula; se remover o principal, promove o primeiro da lista. */
+    /** Desvincula; se remover o principal, promove o primeiro restante. */
     public void removerResponsavel(ResponsavelId idResp) {
-        var nova = new ArrayList<>(responsaveis);
-        boolean removido = nova.remove(idResp);
+        boolean removido = vinculos.removeIf(v -> v.responsavel().equals(idResp));
         if (!removido) return;
 
-        var novoPrincipal = this.responsavelPrincipal;
-        if (idResp.equals(this.responsavelPrincipal)) {
-            novoPrincipal = nova.get(0); // autopromoção
+        if (vinculos.isEmpty()) throw new IllegalStateException("o aluno deve ter pelo menos um responsável");
+
+        if (getResponsavelPrincipal() == null) {
+            promover(vinculos.get(0).responsavel());
         }
-
-        responsaveis.clear();
-        responsaveis.addAll(nova);
-        responsavelPrincipal = novoPrincipal;
+        validarInvariantesVinculos(vinculos);
     }
 
+    /** Define um dos já vinculados como principal. */
     public void definirPrincipal(ResponsavelId idResp) {
-        if (!responsaveis.contains(idResp))
-            throw new IllegalStateException("Vínculo de responsável inexistente");
-        this.responsavelPrincipal = idResp;
+        if (!contem(idResp)) throw new IllegalStateException("Vínculo de responsável inexistente");
+        promover(idResp);
+        validarInvariantesVinculos(vinculos);
     }
 
-    // ========= operações de notas =========
-    
-    /**
-     * Adiciona uma nota do aluno em um simulado/disciplina específica.
-     * Operação simples sem validações de negócio.
-     */
+    // ========= operações de notas (mantidas) =========
     public void adicionarNota(SimuladoId simuladoId, DisciplinaId disciplinaId, double valor) {
         String chave = gerarChaveNota(simuladoId, disciplinaId);
         var notaDoAluno = new NotaDoAluno(simuladoId, disciplinaId, valor, LocalDateTime.now(), Collections.emptyList());
         notas.put(chave, notaDoAluno);
     }
 
-    /**
-     * Retorna a nota do aluno em um simulado/disciplina específica.
-     */
     public Optional<NotaDoAluno> obterNota(SimuladoId simuladoId, DisciplinaId disciplinaId) {
         String chave = gerarChaveNota(simuladoId, disciplinaId);
         return Optional.ofNullable(notas.get(chave));
     }
 
-    /**
-     * Adiciona uma justificativa à nota existente.
-     */
     public void adicionarJustificativa(SimuladoId simuladoId, DisciplinaId disciplinaId, Justificativa justificativa) {
         String chave = gerarChaveNota(simuladoId, disciplinaId);
-        NotaDoAluno notaExistente = notas.get(chave);
-        
-        if (notaExistente == null) {
-            throw new IllegalStateException("Nota não encontrada para o simulado/disciplina especificados");
-        }
-        
-        NotaDoAluno notaAtualizada = notaExistente.adicionarJustificativa(justificativa);
-        notas.put(chave, notaAtualizada);
+        var notaExistente = notas.get(chave);
+        if (notaExistente == null) throw new IllegalStateException("Nota não encontrada");
+        notas.put(chave, notaExistente.adicionarJustificativa(justificativa));
     }
 
-    /**
-     * Retifica uma nota existente criando uma nova versão com justificativa.
-     */
     public void retificarNota(SimuladoId simuladoId, DisciplinaId disciplinaId, double novoValor, Justificativa justificativa) {
         String chave = gerarChaveNota(simuladoId, disciplinaId);
-        NotaDoAluno notaExistente = notas.get(chave);
-        
-        if (notaExistente == null) {
-            throw new IllegalStateException("Nota não encontrada para o simulado/disciplina especificados");
-        }
-        
-        // Cria nova versão da nota com o novo valor e justificativa
-        NotaDoAluno notaRetificada = notaExistente.alterarValor(novoValor).adicionarJustificativa(justificativa);
-        notas.put(chave, notaRetificada);
+        var notaExistente = notas.get(chave);
+        if (notaExistente == null) throw new IllegalStateException("Nota não encontrada");
+        notas.put(chave, notaExistente.alterarValor(novoValor).adicionarJustificativa(justificativa));
     }
 
-    /**
-     * Verifica se o aluno possui nota em um simulado/disciplina específica.
-     */
     public boolean possuiNota(SimuladoId simuladoId, DisciplinaId disciplinaId) {
-        String chave = gerarChaveNota(simuladoId, disciplinaId);
-        return notas.containsKey(chave);
+        return notas.containsKey(gerarChaveNota(simuladoId, disciplinaId));
     }
 
-    /**
-     * Retorna todas as notas do aluno em um simulado específico.
-     */
     public List<NotaDoAluno> obterNotasDoSimulado(SimuladoId simuladoId) {
-        return notas.values().stream()
-                .filter(nota -> nota.getSimuladoId().equals(simuladoId))
-                .collect(Collectors.toList());
+        return notas.values().stream().filter(n -> n.getSimuladoId().equals(simuladoId)).toList();
     }
 
-    /**
-     * Gera uma chave única para identificar uma nota (simulado + disciplina).
-     */
     private String gerarChaveNota(SimuladoId simuladoId, DisciplinaId disciplinaId) {
         return simuladoId.value() + "_" + disciplinaId.value();
     }
 
+    // ========= invariantes (somente para vínculos) =========
+    private static void validarInvariantesVinculos(List<AlunoResponsavel> lista) {
+        if (lista == null || lista.isEmpty())
+            throw new IllegalArgumentException("Aluno deve ter ao menos um responsável");
+        if (lista.size() > 3)
+            throw new IllegalArgumentException("o número máximo de responsáveis por aluno é 3");
+
+        // sem duplicados
+        var ids = lista.stream().map(AlunoResponsavel::responsavel).toList();
+        if (new LinkedHashSet<>(ids).size() != ids.size())
+            throw new IllegalArgumentException("Vínculo de responsável duplicado");
+
+        long principais = lista.stream().filter(AlunoResponsavel::principal).count();
+        if (principais != 1)
+            throw new IllegalArgumentException("deve haver exatamente um responsável principal");
+    }
 
     // ========= helpers =========
     private static String requireNonBlank(String s, String msg) {
         if (s == null || s.trim().isEmpty()) throw new IllegalArgumentException(msg);
         return s.trim();
     }
-    private static List<ResponsavelId> copyIds(List<ResponsavelId> origem) {
-        if (origem == null) return new ArrayList<>();
-        var tmp = new ArrayList<ResponsavelId>(origem.size());
-        for (var id : origem) {
+
+    private static List<AlunoResponsavel> montarVinculos(List<ResponsavelId> ids, ResponsavelId principal) {
+        if (ids == null) ids = List.of();
+        if (principal == null) throw new IllegalArgumentException("é obrigatório definir um responsável principal");
+        var lista = new ArrayList<AlunoResponsavel>(ids.size());
+        for (var id : ids) {
             if (id == null) throw new IllegalArgumentException("Responsável não pode ser nulo");
-            tmp.add(id);
+            lista.add(new AlunoResponsavel(id, id.equals(principal)));
         }
-        return tmp;
+        return lista;
+    }
+
+    private boolean contem(ResponsavelId idResp) {
+        return vinculos.stream().anyMatch(v -> v.responsavel().equals(idResp));
+    }
+
+    private void promover(ResponsavelId novoPrincipal) {
+        for (int i = 0; i < vinculos.size(); i++) {
+            var v = vinculos.get(i);
+            vinculos.set(i, new AlunoResponsavel(v.responsavel(), v.responsavel().equals(novoPrincipal)));
+        }
     }
 }
